--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="app_icon_description">アプリの名前</string>
     <string name="save">Save</string>
     <string name="share">share</string>
+    <string name="add_button_description">ToAddAppCard</string>
 </resources>
