implemented add app function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="save">Save</string>
     <string name="share">share</string>
     <string name="add_button_description">ToAddAppCard</string>
+    <string name="add">add</string>
 </resources>
