--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="share">share</string>
     <string name="add_button_description">ToAddAppCard</string>
     <string name="add">add</string>
+    <string name="to_add_app">TOADDAPP</string>
+    <string name="save_draft">下書き保存</string>
 </resources>
