--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_icon_description">アプリの名前</string>
     <string name="save">Save</string>
-    <string name="share">share</string>
+    <string name="screenshot">screenshot</string>
     <string name="add_button_description">ToAddAppCard</string>
     <string name="add">add</string>
     <string name="to_add_app">TOADDAPP</string>
