--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">スマホの中身</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_icon_description">アプリの名前</string>
