--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="add">add</string>
     <string name="to_add_app">TOADDAPP</string>
     <string name="save_draft">下書き保存</string>
+    <string name="exceeded_screenshot_title">スクリーンショットの枚数</string>
+    <string name="exceeded_screenshot_message">上限は10枚です。</string>
+    <string name="ok">OK</string>
+    <string name="share">共有</string>
 </resources>
