implemented going to web page function,and navigating title fragment after sharing function.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="exceeded_screenshot_message">上限は10枚です。</string>
     <string name="ok">OK</string>
     <string name="share">共有</string>
+    <string name="web_site">https://my-app-6154a.web.app/</string>
 </resources>
